k8s/overlays/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: order-service
    env: dev
    stage: dev
  name: order-service
  namespace: dev
spec:
  host: order-service-dev.apps.c3smonkey.ch
  port:
    targetPort: 8080-8080
  to:
    kind: Service
    name: order-service
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
      host: order-service-dev.apps.c3smonkey.ch
      routerName: router
      wildcardPolicy: None
